# ark-save-parser

./: .drone.yml  .gitignore  .gitmodules  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
APExamples/base_api/: __init__.py  ex_01_export_base_from_save.py  ex_02a_import_base_at_location.py
APExamples/basic_parsing/: ex_00_parse_all.py  ex_01_get_obj_by_uuid.py  ex_02_get_obj_by_class_string.py
APExamples/dino_api/: dev_test.py  ex_01_generic_filter.py  ex_02b_tamed_dino_heatmap.py  (+1 more)
examples/: actor_transforms  base_parser_ex_00_parse_all.py  base_parser_ex_01_get_obj_by_uuid.py  base_parser_ex_02_get_obj_by_class_string.py  dino_api_ex_01_generic_filter.py  dino_api_ex_02a_dino_by_stat_heatmap.py  dino_api_ex_02b_tamed_dino_heatmap.py  dino_api_ex_03_get_dino_with_highest_stat.py  dino_api_ex_04_get_tamed_rock_drake_with_highest_base_stam.py  dino_api_ex_05_get_dino_with_most_mutations.py  equipment_api_ex_01_get_armor_with_highest_durability.py  equipment_api_ex_02_get_highest_dmg_weapon.py  equipment_api_ex_03_get_highest_dmg_longneck_blueprint.py  ex_ftp_config  find_aq_rating.py  get_dinos.py  get_props_of.py  get_stats.py  get_structures.py  get_turrets.py  look_for_value.py  modify_dino.py  player_api_ex_01_get_all_tribes.py  player_tests.py  print_cryopod_properties.py  replace_dino_owner.py  resource_test.py  save_header  stackable_test.py  test3.py  test_heatmap.py  test_rcon.py  test_structure_owner_replace.py
examples/dino api/: dev_test.py  (+4 more)
temp/: export_tamed.py
tests/: conftest.py  general_parsing.py  pytest.ini
(+345 files in other folders)
