[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ark-save-parser"
version = "0.0.1"
dependencies = [
]
authors = [
  { name="Vincent Heneau", email="vincent.henau.github@gmail.com" },
]
description = "A package to parse and modify ark save files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/VincentHenauGithub/ark-save-parser"

[tool.hatch.build.targets.wheel]
packages = [ "src/arkparse" ]